--- a/Employe Leave Client/package.json
+++ b/Employe Leave Client/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.13.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
